scam (0.1.5)

  * changed environment predefineds to __context, __level, __label, etc.

scam (0.1.4)

  * added the pp function to pretty print all objects in the system
  * fixed gc bug in variadic math functions (hopefully!)

scam (0.1.3)

  * removed limit on number of statements per scope
  * allowed function calls to generate symbols for assign, set!, and .
  * added inherit.lib

scam (0.1.2)

  * added library functions

scam (0.1.1)

  * added traceback on exceptions (use -t option to display traceback)

scam (0.1.0)

  * initial Scam pre-release

  -- John C. Lusth <lusth@cs.ua.edu>  2011-08-23 